...
                          borderRadius: 8.0,
                          elevation: 0.0,
                          buttonMargin: EdgeInsetsDirectional.fromSTEB(
                              8.0, 0.0, 8.0, 0.0),
                          tabs: [
                            Tab(
                              key: ValueKey('signup_tab_xvm5'),
                              text: 'Sign Up',
                            ),
                            Tab(
                              key: ValueKey('login_tab_ol16'),
                              text: 'Log In',
                            ),
                          ],
                          controller: _model.tabBarController,
                          onTap: (i) async {
                            [() async {}, () async {}][i]();
...
                                  Form(
                                    key: _model.formKey,
                                    autovalidateMode: AutovalidateMode.disabled,
                                    child: Container(
                                      width: 342.0,
                                      child: TextFormField(
                                        key: ValueKey('Signup_email_33ao'),
                                        controller:
                                            _model.signupEmailTextController,
                                        focusNode: _model.signupEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.signupEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                  Padding(
                                    padding: EdgeInsetsDirectional.fromSTEB(
                                        0.0, 20.0, 0.0, 0.0),
                                    child: Container(
                                      width: 342.0,
                                      child: TextFormField(
                                        key: ValueKey('Signup_password_3lq0'),
                                        controller:
                                            _model.signupPasswordTextController,
                                        focusNode:
                                            _model.signupPasswordFocusNode,
                                        autofocus: false,
                                        enabled: true,
...
                                    padding: EdgeInsetsDirectional.fromSTEB(
                                        0.0, 20.0, 0.0, 0.0),
                                    child: Container(
                                      width: 342.0,
                                      child: TextFormField(
                                        key:
                                            ValueKey('Signup_confirmPass_drwi'),
                                        controller: _model
                                            .signupConfirmPassTextController,
                                        focusNode:
                                            _model.signupConfirmPassFocusNode,
                                        autofocus: false,
                                        enabled: true,
...
                              child: Column(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Container(
                                    width: 342.0,
                                    child: TextFormField(
                                      key: ValueKey('Login_email_wcsx'),
                                      controller:
                                          _model.loginEmailTextController,
                                      focusNode: _model.loginEmailFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.loginEmailTextController',
                                        Duration(milliseconds: 2000),
...
                                  Padding(
                                    padding: EdgeInsetsDirectional.fromSTEB(
                                        0.0, 20.0, 0.0, 0.0),
                                    child: Container(
                                      width: 342.0,
                                      child: TextFormField(
                                        key: ValueKey('Login_password_rl49'),
                                        controller:
                                            _model.loginPasswordTextController,
                                        focusNode:
                                            _model.loginPasswordFocusNode,
                                        autofocus: false,
                                        enabled: true,
...
                          'bottom') &&
                      (_model.tabBarCurrentIndex == 1))
                    Padding(
                      padding:
                          EdgeInsetsDirectional.fromSTEB(0.0, 100.0, 0.0, 0.0),
                      child: FFButtonWidget(
                        key: ValueKey('login_button_bottom_x45s'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'SIGNUP_AND_LOGIN_login_button_bottom_ON_');
                          logFirebaseEvent('login_button_bottom_auth');
                          GoRouter.of(context).prepareAuthEvent();

...
                      ),
                    ),
                  if ((getRemoteConfigString('login_button_position') ==
                          'inline') &&
                      (_model.tabBarCurrentIndex == 1))
                    FFButtonWidget(
                      key: ValueKey('login_button_inline_oas2'),
                      onPressed: () async {
                        logFirebaseEvent(
                            'SIGNUP_AND_LOGIN_login_button_inline_ON_');
                        logFirebaseEvent('login_button_inline_auth');
                        GoRouter.of(context).prepareAuthEvent();

...
