...
                                                ),
                                              ),
                                            ),
                                          ),
                                        ),
                                        TextFormField(
                                          key: ValueKey('serviceName_inxk'),
                                          controller:
                                              _model.serviceNameTextController,
                                          focusNode:
                                              _model.serviceNameFocusNode,
                                          autofocus: true,
                                          textCapitalization:
...
                                                              .words),
                                                );
                                              }),
                                          ],
                                        ),
                                        TextFormField(
                                          key: ValueKey('description_o68m'),
                                          controller:
                                              _model.descriptionTextController,
                                          focusNode:
                                              _model.descriptionFocusNode,
                                          autofocus: true,
                                          textCapitalization:
...
                                                                      context)
                                                                  .labelMedium
                                                                  .fontStyle,
                                                        ),
                                                  ),
                                                  TextFormField(
                                                    key: ValueKey('price_g33i'),
                                                    controller: _model
                                                        .priceTextController,
                                                    focusNode:
                                                        _model.priceFocusNode,
                                                    autofocus: true,
                                                    textCapitalization:
...
                  ),
                  decoration: BoxDecoration(),
                  child: Padding(
                    padding:
                        EdgeInsetsDirectional.fromSTEB(20.0, 0.0, 20.0, 0.0),
                    child: FFButtonWidget(
                      key: ValueKey('PostButton_x989'),
                      onPressed: () async {
                        logFirebaseEvent(
                            'CREATE_PRODUCT_PAGE_PostButton_ON_TAP');
                        if ((_model.uploadedFileUrl_createProductPhoto !=
                                    '') ||
                            (_model.uploadedFileUrl_createProductPhoto ==
...
