...
                                        mainAxisAlignment:
                                            MainAxisAlignment.center,
                                        crossAxisAlignment:
                                            CrossAxisAlignment.start,
                                        children: [
                                          Text(
                                            key: ValueKey('Text_lxo6'),
                                            'Featured Products ',
                                            style: FlutterFlowTheme.of(context)
                                                .headlineLarge
                                                .override(
                                                  font: GoogleFonts.interTight(
                                                    fontWeight:
...
                              ),
                            ),
                          ),
                        ],
                      ),
                      FFButtonWidget(
                        key: ValueKey('PostButton_t8el'),
                        onPressed: () async {
                          logFirebaseEvent('HOME_PAGE_PostButton_ON_TAP');
                          logFirebaseEvent('PostButton_navigate_to');

                          context.pushNamed(CreateProductWidget.routeName);
                        },
...
