import 'dart:io';
import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:google_fonts/google_fonts.dart';
import 'package:integration_test/integration_test.dart';
import 'package:campus_hustle_c_s_c305/flutter_flow/flutter_flow_drop_down.dart';
import 'package:campus_hustle_c_s_c305/flutter_flow/flutter_flow_icon_button.dart';
import 'package:campus_hustle_c_s_c305/flutter_flow/flutter_flow_widgets.dart';
import 'package:campus_hustle_c_s_c305/flutter_flow/flutter_flow_theme.dart';
import 'package:campus_hustle_c_s_c305/index.dart';
import 'package:campus_hustle_c_s_c305/main.dart';
import 'package:campus_hustle_c_s_c305/flutter_flow/flutter_flow_util.dart';

import 'package:provider/provider.dart';
import 'package:campus_hustle_c_s_c305/backend/firebase/firebase_config.dart';
import 'package:campus_hustle_c_s_c305/auth/firebase_auth/auth_util.dart';
import 'package:firebase_auth/firebase_auth.dart';

void main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  setUpAll(() async {
    await initFirebase();
  });

  setUp(() async {
    await authManager.signOut();
    FFAppState.reset();
    final appState = FFAppState();
    await appState.initializePersistedState();
  });

  testWidgets('US2 Login Test', (WidgetTester tester) async {
    _overrideOnError();

    await tester.pumpWidget(ChangeNotifierProvider(
      create: (context) => FFAppState(),
      child: MyApp(
        entryPage: SignupAndLoginPageWidget(),
      ),
    ));
    await GoogleFonts.pendingFonts();

    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    await tester.tap(find.byKey(const ValueKey('login_tab_ol16')));
    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    await tester.tap(find.byKey(const ValueKey('Login_email_wcsx')));
    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    await tester.enterText(
        find.byKey(const ValueKey('Login_email_wcsx')), 'test@test.com');
    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    await tester.tap(find.byKey(const ValueKey('Login_password_rl49')));
    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    await tester.enterText(
        find.byKey(const ValueKey('Login_password_rl49')), 'testtest');
    FocusManager.instance.primaryFocus?.unfocus();
    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    await tester.tap(find.byKey(const ValueKey('login_button_bottom_x45s')));
    await tester.pumpAndSettle(const Duration(milliseconds: 200));
    expect(find.byKey(const ValueKey('Text_lxo6')), findsWidgets);
  });

  testWidgets('US4 Golden Path', (WidgetTester tester) async {
    _overrideOnError();
    await FirebaseAuth.instance.signInWithEmailAndPassword(
        email: 'bob123@gmail.com', password: 'bob123');
    await tester.pumpWidget(ChangeNotifierProvider(
      create: (context) => FFAppState(),
      child: const MyApp(),
    ));
    await GoogleFonts.pendingFonts();

    await tester.pumpAndSettle(const Duration(milliseconds: 3000));
    await tester.tap(find.byKey(const ValueKey('PostButton_t8el')));
    await tester.pumpAndSettle(const Duration(milliseconds: 2000));
    await tester.tap(find.byKey(const ValueKey('serviceName_inxk')));
    await tester.pumpAndSettle(const Duration(milliseconds: 2000));
    await tester.enterText(
        find.byKey(const ValueKey('serviceName_inxk')), 'robot food');
    await tester.pumpAndSettle(const Duration(milliseconds: 500));
    await tester.tap(find.byKey(const ValueKey('description_o68m')));
    await tester.pumpAndSettle(const Duration(milliseconds: 500));
    await tester.enterText(find.byKey(const ValueKey('description_o68m')),
        'gooooooooooooooooooooooooooooooooooood');
    await tester.pumpAndSettle(const Duration(milliseconds: 500));
    await tester.tap(find.byKey(const ValueKey('price_g33i')));
    await tester.pumpAndSettle(const Duration(milliseconds: 500));
    await tester.enterText(find.byKey(const ValueKey('price_g33i')), '400');
    await tester.pumpAndSettle(const Duration(milliseconds: 2000));
    await tester.tap(find.byKey(const ValueKey('PostButton_x989')));
    await tester.pumpAndSettle(const Duration(milliseconds: 2000));
    expect(find.text('robot food'), findsWidgets);
  });

  testWidgets('US1 Account creation', (WidgetTester tester) async {
    _overrideOnError();

    await tester.pumpWidget(ChangeNotifierProvider(
      create: (context) => FFAppState(),
      child: const MyApp(),
    ));
    await GoogleFonts.pendingFonts();

    await tester.tap(find.byKey(const ValueKey('1')));
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.tap(find.byKey(const ValueKey('signup_tab_xvm5')));
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.tap(find.byKey(const ValueKey('Signup_email_33ao')));
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.enterText(
        find.byKey(const ValueKey('Signup_email_33ao')), 'bob2@gmail.com');
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.tap(find.byKey(const ValueKey('Signup_password_3lq0')));
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.enterText(
        find.byKey(const ValueKey('Signup_password_3lq0')), 'bobbob');
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.tap(find.byKey(const ValueKey('Signup_confirmPass_drwi')));
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.enterText(
        find.byKey(const ValueKey('Signup_confirmPass_drwi')), 'bobbob');
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    await tester.tap(find.byKey(const ValueKey('login_button_inline_oas2')));
    await tester.pumpAndSettle(const Duration(milliseconds: 1000));
    expect(find.byKey(const ValueKey('Text_lxo6')), findsOneWidget);
  });
}

// There are certain types of errors that can happen during tests but
// should not break the test.
void _overrideOnError() {
  final originalOnError = FlutterError.onError!;
  FlutterError.onError = (errorDetails) {
    if (_shouldIgnoreError(errorDetails.toString())) {
      return;
    }
    originalOnError(errorDetails);
  };
}

bool _shouldIgnoreError(String error) {
  // It can fail to decode some SVGs - this should not break the test.
  if (error.contains('ImageCodecException')) {
    return true;
  }
  // Overflows happen all over the place,
  // but they should not break tests.
  if (error.contains('overflowed by')) {
    return true;
  }
  // Sometimes some images fail to load, it generally does not break the test.
  if (error.contains('No host specified in URI') ||
      error.contains('EXCEPTION CAUGHT BY IMAGE RESOURCE SERVICE')) {
    return true;
  }
  // These errors should be avoided, but they should not break the test.
  if (error.contains('setState() called after dispose()')) {
    return true;
  }
  // Web-specific error when interacting with TextInputType.emailAddress
  if (error.contains('setSelectionRange') &&
      error.contains('HTMLInputElement')) {
    return true;
  }

  return false;
}
